src/objects/Google_Analytics_Result__c.object
<CustomObject>
    <fields>
        <fullName>Data_Group__c</fullName>
        <label>Data Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Name__c</fullName>
        <label>Data Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Value__c</fullName>
        <label>Data Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Type__c</fullName>
        <label>Parent Object Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <label>Parent Object</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Google Analytics Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Object__c</columns>
        <columns>Parent_Object_Type__c</columns>
        <columns>Data_Group__c</columns>
        <columns>Data_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Group__c</field>
            <operation>equals</operation>
            <value>Colour</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Google Analytics Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Analytics Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>